Fix unnecessary whitespace after logo
Fixes there being additional whitespace after the rebrand logo when there's no product name, which becomes visible when hovering or focusing the logo.

Fixes #5902.

--- a/packages/govuk-frontend/src/govuk/components/header/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/header/_index.scss
@@ -94,6 +94,11 @@
     @include _govuk-rebrand {
       margin-right: govuk-px-to-rem(7px); // 1 'dot'
       margin-bottom: $govuk-header-rebrand-logo-bottom-margin;
+
+      // Remove right-margin if there's no product name
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
 
